[workspace]
members = [
  "hkdf",
  "client", 
  "server", 
  "handshake", 
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util"] }
blake3 = "1"
serde = { version = "1", features = ["derive"]}
bincode = "1"
ring = "0.17" 
chacha20poly1305 = "0.10"
hex = "0.4"
