[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
blake3 = { workspace = true }
hkdf = { path = "../hkdf" }
handshake = { path = "../handshake" }
serde = { workspace = true }
bincode = { workspace = true }
ring = { workspace = true }
hex  = { workspace = true }
